--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>Units Converter</title>
   </head>
   <body>
+    <header>
+      <h1>Metric/Imperial Unit Conversion</h1>
+      <input type="text" id="input-number" placeholder="Enter value" />
+      <button id="convert-btn">Convert</button>
+    </header>
+    <main>
+      <ul>
+        <li>
+          <div class="list-measurements">
+            <h2>Length (Meter/Feet)</h2>
+            <div class="ressults" id="results-length"></div>
+          </div>
+        </li>
+        <li>
+          <div class="list-measurements">
+            <h2>Volume (Liters/Gallons)</h2>
+            <div class="ressults" id="results-volume"></div>
+          </div>
+        </li>
+        <li>
+          <div class="list-measurements">
+            <h2>Mass (Kilograms/Pounds)</h2>
+            <div class="ressults" id="results-mass"></div>
+          </div>
+        </li>
+      </ul>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
